# FloatingPointNumber

./: CMakeLists.txt  REPORT.md  main.cpp
src/: CMakeLists.txt  FixedPoint.cpp  FixedPoint.h  FloatingPoint.cpp  FloatingPoint.h
